[kitchen-docker-31] Feat: change ProductIndexation to a specific project to handle it - part 2 - Complete product sku update